[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-clock"
version = "0.1.0"
description = "Temporal inference from physics models — no RTC, no NTP, no GPS"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Casey Digennaro", email = "casey@superinstance.com" },
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["physics_clock*"]
